@@ -93,9 +93,8 @@ class CacheEntry(object):
         self.dirty = True
         self.fh.truncate(size)
         if size is None:
-            if self.pos < self.size:
-                self.size = self.pos
-        elif size < self.size:
+            self.size = self.pos
+        else:
             self.size = size
 
     def write(self, buf):
